[project]
name = "knocker"
version = "1.4.0"
description = "Simple ready-to-deploy service to retry HTTP calls"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["http", "retry", "asgi", "service"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Internet :: WWW/HTTP",
]
urls = { "Homepage" = "https://github.com/klen/knocker", "Repository" = "https://github.com/klen/knocker" }

dependencies = [
  "asgi-tools>=0.70.6",
  "httpx==0.23.3",
  "marshmallow==3.19.0",
  "modconfig==1.2.1",
  "gunicorn",
  "sentry-sdk",
  "uvicorn[standard]",
  "uvloop",
]

[dependency-groups]
dev = [
  "black",
  "bump2version",
  "gunicorn",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-aio",
  "refurb",
  "ruff",
  "sentry-sdk",
]

[tool.setuptools.packages.find]
include = ["knocker"]

[tool.pytest.ini_options]
addopts = "-xsv"

[tool.uv]
package = false

[tool.ruff]
exclude = [".venv"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
allowed-confusables = ["’"]
select = ["ALL"]            # Select all rules, then explicitly ignore
ignore = ["ANN003", "S311"]

[tool.black]
line-length = 100
target-version = ["py313"]
preview = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
packages = ["knocker"]

[tool.bumpversion]
current_version = "1.4.0"
commit = false
tag = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "knocker/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
