[bumpversion]
commit = True
current_version = 0.17.0
files = knocker/__init__.py
tag = True
tag_name = {new_version}
message = build(version): {current_version} -> {new_version}

[wheel]
python-tag = py3

[metadata]
name = knocker
version = attr: knocker.__version__
url = https://github.com/klen/knocker
description = Simple ready-to-deploy service to retry HTTP calls.
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = asyncio, asgi
project_urls = 
	Documentation = https://github.com/klen/knocker
	Source code = https://github.com/klen/knocker
	Issue tracker = https://github.com/klen/knocker/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO

[options]
packages = knocker
include_package_data = True
python_requires = >= 3.9
install_requires = 
	asgi-tools      == 0.42.5
	httpx           == 0.17.1
	marshmallow     == 3.10.0
	modconfig       == 0.16.0

[options.package_data]
knocker = py.typed

[options.extras_require]
tests = 
	pytest
	pytest-asyncio
	pytest-mypy
	sentry_sdk
build = 
	bump2version
	twine
	wheel
sentry = 
	sentry_sdk
run = 
	gunicorn
	httptools
	uvicorn
	uvloop

[bumpversion:file:.version]

[bumpversion:file:README.md]

[tool:pytest]
addopts = -xsv --mypy

[pylama]
ignore = D203

[pylama:tests.py]
ignore = D
